posts switch zh-CN & formatter & parser

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@astrojs/sitemap": "^3.4.1",
     "@resvg/resvg-js": "^2.6.2",
     "@tailwindcss/vite": "^4.1.11",
+    "@types/mdast": "^4.0.4",
     "astro": "^5.12.0",
     "dayjs": "^1.11.13",
     "lodash.kebabcase": "^4.1.1",
@@ -24,7 +25,9 @@
     "remark-toc": "^9.0.0",
     "satori": "^0.15.2",
     "sharp": "^0.34.2",
-    "tailwindcss": "^4.1.11"
+    "tailwindcss": "^4.1.11",
+    "unist": "^0.0.1",
+    "unist-util-visit": "^5.0.0"
   },
   "devDependencies": {
     "@astrojs/check": "^0.9.4",
